2021-02-04  Jay Berkenbilt  <ejb@ql.org>

	* By default, give an error if a user attempts to encrypt a file
	with an empty owner password or an owner password that is the same
	as the user password. Such files are insecure. Most viewers either
	won't open such files or will not enforce security settings. To
	allow explicit creation of files like this, pass the new
	--allow-insecure option. Fixes #501.

2021-02-02  Jay Berkenbilt  <ejb@ql.org>

	* Bug fix: if a form XObject lacks a resources dictionary,
	consider any names in that form XObject to be referenced from the
	containing page. This is compliant with older PDF versions. Also
	detect if any form XObjects have any unresolved names and, if so,
	don't remove unreferenced resources from them or from the page
	that contains them. Fixes #494.

2021-01-31  Jay Berkenbilt  <ejb@ql.org>

	* Bug fix: properly handle strings if they appear in inline image
	dictionaries while externalizing inline images.

2021-01-30  Jay Berkenbilt  <ejb@ql.org>

	* Add examples/pdf-name-number-tree.cc to illustrate new
	name/number tree API and new array/dictionary iterator API.

2021-01-29  Jay Berkenbilt  <ejb@ql.org>

	* Add wrappers QPDFDictItems and QPDFArrayItems around
	QPDFObjectHandle that provide a C++ iterator API, including C++11
	range-for iteration, over arrays and dictionaries. With this, you
	can do

	for (auto i: QPDFDictItems(oh))
	{
	    // i.first is a string, i.second is a QPDFObjectHandle
	}
	for (auto i: QPDFArrayItems(oh))
	{
	    // i is a QPDFObjectHandle
	}

	* QPDFObjectHandle::is* methods to check type now return false on
	uninitialized objects rather than crashing or throwing a logic
	error.

2021-01-24  Jay Berkenbilt  <ejb@ql.org>

	* Implement remove for name and number trees as well as exposing
	remove and insertAfter methods for iterators. With this addition,
	qpdf now has robust read/write support for name and number trees.

2021-01-23  Jay Berkenbilt  <ejb@ql.org>
